# helmet-detection-system

./: .gitignore  README.md  pyproject.toml  requirements.txt
.claude/: CLAUDE.md
.playwright-mcp/: page-2026-07-16T08-42-23-899Z.yml  page-2026-07-16T08-44-22-937Z.yml  page-2026-07-16T08-44-51-453Z.yml  page-2026-07-16T08-45-07-659Z.yml  page-2026-07-16T08-45-28-412Z.yml  page-2026-07-16T08-45-39-685Z.yml  page-2026-07-16T09-12-36-749Z.yml  page-2026-07-16T09-12-55-537Z.yml  page-2026-07-16T09-13-05-900Z.yml  page-2026-07-16T09-13-22-358Z.yml  page-2026-07-16T09-13-32-320Z.yml  page-2026-07-16T09-13-39-470Z.yml  page-2026-07-16T09-13-51-430Z.yml  page-2026-07-16T09-14-08-497Z.yml  page-2026-07-16T09-14-17-482Z.yml  page-2026-07-16T09-14-28-168Z.yml  page-2026-07-16T09-14-40-589Z.yml  page-2026-07-16T09-14-42-150Z.yml  page-2026-07-16T09-15-10-664Z.yml  page-2026-07-16T09-15-20-881Z.yml  page-2026-07-16T09-15-33-304Z.yml  page-2026-07-16T09-15-43-679Z.yml  page-2026-07-16T09-15-56-771Z.yml  page-2026-07-16T09-16-07-778Z.yml  page-2026-07-16T09-16-20-978Z.yml  page-2026-07-16T09-16-38-897Z.yml  page-2026-07-16T09-17-09-122Z.yml  page-2026-07-16T09-17-17-315Z.yml  page-2026-07-16T09-17-27-407Z.yml  page-2026-07-16T09-17-47-753Z.yml  page-2026-07-16T09-18-31-145Z.yml  page-2026-07-16T09-19-11-264Z.yml  page-2026-07-16T09-19-42-189Z.yml
api-services/: main.py  requirements.txt
configs/: api.yaml  data.yaml  inference.yaml  logging.yaml  training.yaml
data/metadata/: test.txt  (+4 more)
docker/: Dockerfile.ai  Dockerfile.api  Dockerfile.ui  docker-compose.yml
ml/: __init__.py
(+30 files in other folders)
