[project]
name = "helmet-detection-system"
version = "0.1.0"
description = "Computer vision project: helmet-detection-system"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ml"]

[tool.pytest.ini_options]
testpaths = ["ml/tests", "tests"]

[tool.ruff]
line-length = 100
